# AC_motor_drive_sim

./: CMakeLists.txt  README.md  execute.txt  main.c
config/: config.h  params.c  params.h
control/: foc_controller.c  foc_controller.h  im_observer_fo.c  im_observer_fo.h  observer_bernard2021.c  observer_bernard2021.h  observer_bobtsov2015.c  observer_bobtsov2015.h  observer_eta_only.c  observer_eta_only.h  observer_fluxphi.c  observer_fluxphi.h  observer_inoue2011.c  observer_inoue2011.h  observer_ipmsm_nlrs.c  observer_ipmsm_nlrs.h  observer_pebo_drem.c  observer_pebo_drem.h  observer_piippo2008.c  observer_piippo2008.h  observer_select.c  observer_select.h  transforms.c  transforms.h
core/: types.h
io/: adc_model.c  adc_model.h  logger.c  logger.h
plant/: im_model.c  im_model.h  inverter_avg.c  inverter_avg.h  pmsm_model.c  pmsm_model.h
